--- a/index.html
+++ b/index.html
@@ -1161,6 +1161,7 @@ height: 300px;
 <input type="text" id="searchInput" oninput="window.searchOrders()" style="flex: 1; padding:16px; border-radius:16px; border:2px solid var(--glass-border); background:rgba(255,255,255,0.95); font-weight:600;" placeholder="🔍 ابحث في كل السجلات..." title="البحث يعمل على جميع البيانات المحملة">
 </div>
 <button id="exportExcelBtn" class="btn" style="background: linear-gradient(135deg, var(--secondary) 0%, #229954 100%); color:white;">📊 تصدير Excel</button>
+<button id="cleanDuplicatesMainBtn" class="btn" style="background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%); color: white;">🧹 حذف المكرر</button>
 <button onclick="location.reload()" class="btn" style="background: linear-gradient(135deg, var(--danger) 0%, #c0392b 100%); color: white;">🚪 خروج</button>
 </div>
 
@@ -4062,6 +4063,131 @@ document.getElementById('exportExcelBtn').onclick = () => {
 const wb = XLSX.utils.table_to_book(document.getElementById("excelTable"));
 XLSX.writeFile(wb, `منظومة_كفر_صقر_${new Date().toLocaleDateString('ar-EG')}.xlsx`);
 alert("✅ تم تصدير البيانات بنجاح");
+};
+
+// Clean Duplicates Main Button (same as cleanDuplicatesBtn)
+document.getElementById('cleanDuplicatesMainBtn').onclick = async () => {
+if (!confirm('🧹 هل تريد حذف السجلات المكررة؟\n\nسيتم:\n✅ حذف التكرار من Supabase\n✅ حذف التكرار من لوحة التحكم\n✅ الاحتفاظ بأحدث سجل فقط')) {
+return;
+}
+
+const loadingDiv = document.createElement('div');
+loadingDiv.style.cssText = 'position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:white;padding:30px;border-radius:15px;box-shadow:0 10px 40px rgba(0,0,0,0.3);z-index:10000;text-align:center;';
+loadingDiv.innerHTML = '<div style="font-size:3rem;margin-bottom:15px;">🧹</div><div style="font-size:1.2rem;color:#333;font-weight:600;">جاري حذف السجلات المكررة...</div><div style="margin-top:10px;color:#666;">يرجى الانتظار</div>';
+document.body.appendChild(loadingDiv);
+
+try {
+// Load all data from Supabase (with pagination)
+console.log('📥 جاري تحميل كل البيانات من Supabase...');
+let allOrders = [];
+let from = 0;
+const batchSize = 1000;
+let hasMore = true;
+
+while (hasMore) {
+const { data: batch, error } = await window.supabaseClient
+.from('orders')
+.select('*')
+.order('submitted_at', { ascending: false })
+.range(from, from + batchSize - 1);
+
+if (error) throw error;
+
+if (batch && batch.length > 0) {
+allOrders = allOrders.concat(batch);
+from += batchSize;
+hasMore = batch.length === batchSize;
+console.log(`📥 تم تحميل ${allOrders.length} سجل...`);
+} else {
+hasMore = false;
+}
+}
+
+console.log(`📊 تم تحميل ${allOrders.length} سجل من Supabase`);
+
+// Find duplicates by national_id
+const seenNIDs = new Map();
+const duplicateIds = [];
+
+allOrders.forEach(order => {
+if (!order.national_id) return;
+
+if (seenNIDs.has(order.national_id)) {
+const existing = seenNIDs.get(order.national_id);
+const existingDate = new Date(existing.submitted_at || 0);
+const currentDate = new Date(order.submitted_at || 0);
+
+if (currentDate > existingDate) {
+duplicateIds.push(existing.id);
+seenNIDs.set(order.national_id, order);
+} else {
+duplicateIds.push(order.id);
+}
+} else {
+seenNIDs.set(order.national_id, order);
+}
+});
+
+console.log(`🔍 وجدت ${duplicateIds.length} سجل مكرر`);
+
+if (duplicateIds.length === 0) {
+loadingDiv.remove();
+alert('✅ لا توجد سجلات مكررة!\n\nجميع السجلات فريدة.');
+return;
+}
+
+// Delete duplicates from Supabase
+console.log('🗑️ جاري حذف السجلات المكررة من Supabase...');
+const deleteBatchSize = 50;
+let deletedCount = 0;
+
+for (let i = 0; i < duplicateIds.length; i += deleteBatchSize) {
+const batch = duplicateIds.slice(i, i + deleteBatchSize);
+const { error: deleteError } = await window.supabaseClient
+.from('orders')
+.delete()
+.in('id', batch);
+
+if (deleteError) {
+console.error('خطأ في حذف دفعة:', deleteError);
+} else {
+deletedCount += batch.length;
+console.log(`✅ تم حذف ${deletedCount} من ${duplicateIds.length}`);
+}
+}
+
+// Clean LocalStorage
+console.log('🧹 جاري تنظيف لوحة التحكم...');
+const uniqueOrders = Array.from(seenNIDs.values()).map(order => ({
+id: order.id,
+owner: order.owner_name,
+nationalId: order.national_id,
+phone: order.phone,
+address: order.address,
+vType: order.vehicle_type,
+vCode: order.code || '',
+vYear: order.vehicle_year,
+chassisNumber: order.chassis_number,
+motorNumber: order.motor_number,
+refNumber: order.ref_number,
+timestamp: order.submitted_at,
+status: order.status,
+images: order.images || []
+}));
+
+localStorage.setItem('vehicleOrders', JSON.stringify(uniqueOrders));
+console.log(`💾 تم حفظ ${uniqueOrders.length} سجل فريد`);
+
+loadingDiv.remove();
+alert(`✅ تم حذف السجلات المكررة بنجاح!\n\n🗑️ تم حذف: ${deletedCount} سجل مكرر\n✅ تم الاحتفاظ بـ: ${uniqueOrders.length} سجل فريد\n\n☁️ تم التنظيف من Supabase ولوحة التحكم`);
+
+// Reload data
+await loadAdminData();
+} catch (error) {
+loadingDiv.remove();
+alert('❌ حدث خطأ أثناء حذف المكرر: ' + error.message);
+console.error('Clean duplicates error:', error);
+}
 };
 
 // Search - استخدام نظام Pagination الجديد
