--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <title>منظومة تكويد المركبات - كفر صقر</title>
 
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="https://i.postimg.cc/brFBgHg7/Flag-of-Sharkiya-Governorate.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/brFBgHg7/Flag-of-Sharkiya-Governorate.png">
+
 <!-- External Libraries -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous">
