--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@ alt="علم الشرقية">
 <small style="font-size: 0.65rem; opacity: 0.85;">د/ أحمد المقدم</small>
 </div>
 <div style="display:flex; gap:6px; flex-wrap: wrap;">
-<button id="goPortalBtn" class="btn" style="background: rgba(255,255,255,0.15); color: white; display:none; padding: 6px 10px; font-size: 0.75rem;" onclick="location.reload()">🏠 البوابة</button>
+<button id="goPortalBtn" class="btn" style="background: rgba(255,255,255,0.15); color: white; display:none; padding: 6px 10px; font-size: 0.75rem;" onclick="goToPortal()">🏠 البوابة</button>
 <button id="logoutBtn" class="btn" style="background: rgba(255,0,0,0.3); color: white; border: 2px solid rgba(255,255,255,0.4); display:none; cursor:pointer; padding: 6px 10px; font-size: 0.75rem;" onclick="logoutAdmin()">🚪 خروج</button>
 <button id="loginBtn" class="btn" style="background: rgba(255,255,255,0.25); color: white; border: 2px solid rgba(255,255,255,0.4); padding: 6px 10px; font-size: 0.75rem;">🔐 التحكم</button>
 </div>
@@ -2144,76 +2144,7 @@ return;
 document.getElementById('loadingSpinner').style.display = 'block';
 
 try {
-// First, search in localStorage (imported data)
-let localData = null;
-try {
-const stored = localStorage.getItem('vehicleOrders');
-if (stored) {
-const orders = JSON.parse(stored);
-localData = orders.find(o => 
-o.nationalId === nid && 
-o.owner === owner && 
-o.phone === phone
-);
-}
-} catch (e) {
-console.error('خطأ في قراءة LocalStorage:', e);
-}
-
-// If found in localStorage, display it
-if (localData) {
-const resultDiv = document.getElementById('inquiryResult');
-resultDiv.style.display = 'block';
-resultDiv.style.background = 'linear-gradient(135deg, rgba(39, 174, 96, 0.08) 0%, rgba(46, 204, 113, 0.08) 100%)';
-resultDiv.style.border = '3px solid var(--secondary)';
-resultDiv.innerHTML = `
-<div style="text-align: center;">
-<i style="font-size: 90px; display: block; margin-bottom: 20px; animation: pulse 2s infinite;">✅</i>
-<h3 style="color: var(--secondary); margin-bottom: 25px; font-size: 2rem; font-weight: 900;">تم التكويد بنجاح!</h3>
-</div>
-
-<div style="background: linear-gradient(135deg, var(--secondary) 0%, #229954 100%); padding: 35px; border-radius: 25px; margin: 25px 0; box-shadow: 0 10px 30px rgba(39, 174, 96, 0.3); text-align: center;">
-<p style="color: rgba(255,255,255,0.9); font-size: 1.1rem; margin-bottom: 12px; font-weight: 600;">🔢 كود المركبة الخاص بك</p>
-<h2 style="color: white; font-size: 4.5rem; font-weight: 900; margin: 0; text-shadow: 0 4px 10px rgba(0,0,0,0.2); letter-spacing: 3px;">${localData.vCode || 'غير محدد'}</h2>
-</div>
-
-<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin: 25px 0;">
-<div style="background: white; padding: 20px; border-radius: 15px; text-align: center; box-shadow: 0 4px 15px rgba(0,0,0,0.08);">
-<p style="color: #999; font-size: 0.9rem; margin: 0 0 8px 0;">نوع المركبة</p>
-<p style="color: var(--primary); font-size: 1.3rem; font-weight: bold; margin: 0;">🚜 ${localData.vType}</p>
-</div>
-<div style="background: white; padding: 20px; border-radius: 15px; text-align: center; box-shadow: 0 4px 15px rgba(0,0,0,0.08);">
-<p style="color: #999; font-size: 0.9rem; margin: 0 0 8px 0;">الموديل</p>
-<p style="color: var(--primary); font-size: 1.3rem; font-weight: bold; margin: 0;">📅 ${localData.vYear || 'غير محدد'}</p>
-</div>
-<div style="background: white; padding: 20px; border-radius: 15px; text-align: center; box-shadow: 0 4px 15px rgba(0,0,0,0.08);">
-<p style="color: #999; font-size: 0.9rem; margin: 0 0 8px 0;">العنوان</p>
-<p style="color: var(--primary); font-size: 1.1rem; font-weight: bold; margin: 0;">📍 ${localData.address || 'غير محدد'}</p>
-</div>
-</div>
-
-<div style="background: white; padding: 25px; border-radius: 20px; margin: 25px 0; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
-<h4 style="color: var(--primary); margin: 0 0 20px 0; font-size: 1.3rem; border-bottom: 2px solid var(--primary); padding-bottom: 10px;">📋 بيانات المركبة</h4>
-<div style="display: grid; gap: 12px;">
-<p style="margin: 0; color: #555; font-size: 1rem;"><strong>المالك:</strong> ${localData.owner}</p>
-<p style="margin: 0; color: #555; font-size: 1rem;"><strong>الرقم القومي:</strong> ${localData.nationalId}</p>
-<p style="margin: 0; color: #555; font-size: 1rem;"><strong>الهاتف:</strong> ${localData.phone}</p>
-${localData.chassisNumber ? `<p style="margin: 0; color: #555; font-size: 1rem;"><strong>رقم الشاسيه:</strong> ${localData.chassisNumber}</p>` : ''}
-${localData.motorNumber ? `<p style="margin: 0; color: #555; font-size: 1rem;"><strong>رقم الموتور:</strong> ${localData.motorNumber}</p>` : ''}
-</div>
-</div>
-
-<div style="background: linear-gradient(135deg, rgba(52, 152, 219, 0.1) 0%, rgba(26, 82, 118, 0.1) 100%); padding: 20px; border-radius: 15px; border: 2px solid var(--info); text-align: center;">
-<p style="margin: 0; color: var(--info); font-size: 1rem; line-height: 1.8;">
-<strong>ℹ️ ملاحظة:</strong> هذه البيانات مستوردة من قاعدة البيانات المحلية
-</p>
-</div>
-`; 
-document.getElementById('loadingSpinner').style.display = 'none';
-return;
-}
-
-// If not found in localStorage, search in Supabase
+// Search in Supabase only (LocalStorage removed for security)
 const { data: orders, error } = await window.supabaseClient
 .from('orders')
 .select('*')
@@ -2908,6 +2839,18 @@ location.reload();
 }
 };
 
+// Go to Portal function (without logout)
+window.goToPortal = function() {
+document.getElementById('adminPage').style.display = 'none';
+document.getElementById('citizenPage').style.display = 'none';
+document.getElementById('inquiryPage').style.display = 'none';
+document.getElementById('complaintsPage').style.display = 'none';
+document.getElementById('complaintInquiryPage').style.display = 'none';
+document.getElementById('portalSection').style.display = 'block';
+document.getElementById('goPortalBtn').style.display = 'none';
+console.log('🏠 العودة للبوابة (لا يزال مسجل الدخول)');
+};
+
 async function loadAdminData() {
 console.log('📥 جاري تحميل البيانات من Supabase...');
 
@@ -2974,84 +2917,9 @@ images: item.images || [],
 source: 'supabase'
 }));
 
-// Load from LocalStorage
-let localOrders = [];
-try {
-const stored = localStorage.getItem('vehicleOrders');
-if (stored) {
-const parsed = JSON.parse(stored);
-localOrders = parsed.map((item, index) => ({
-...item,
-id: item.id || `local-${index}`,
-source: 'localStorage',
-owner: item.owner || item.name || 'غير محدد',
-vType: item.vType || 'غير محدد',
-nationalId: item.nationalId || '',
-phone: item.phone || '',
-address: item.address || '',
-chassisNumber: item.chassisNumber || '',
-motorNumber: item.motorNumber || '',
-vCode: item.vCode || '',
-vYear: item.vYear || '',
-vColor: item.vColor || '',
-refNumber: item.refNumber || `REF-${Date.now()}-${index}`,
-timestamp: item.timestamp || Date.now(),
-status: item.status || 'pending',
-images: item.images || []
-}));
-}
-} catch (e) {
-console.error('خطأ في قراءة LocalStorage:', e);
-}
-
-// Combine both sources (remove duplicates by nationalId AND refNumber)
 const combinedOrders = [...supabaseOrders];
-const existingNIDs = new Set(supabaseOrders.map(o => o.nationalId).filter(nid => nid));
-const existingRefs = new Set(supabaseOrders.map(o => o.refNumber).filter(ref => ref));
 
-localOrders.forEach(order => {
-// Skip if duplicate by nationalId OR refNumber
-const isDuplicateNID = order.nationalId && existingNIDs.has(order.nationalId);
-const isDuplicateRef = order.refNumber && existingRefs.has(order.refNumber);
-  
-if (!isDuplicateNID && !isDuplicateRef) {
-combinedOrders.push(order);
-if (order.nationalId) existingNIDs.add(order.nationalId);
-if (order.refNumber) existingRefs.add(order.refNumber);
-total++;
-if (order.status === 'coded' || order.status === 'delivered') {
-coded++;
-} else {
-pending++;
-}
-}
-});
-
-console.log(`📊 تم تحميل ${supabaseOrders.length} من Supabase و ${localOrders.length} من LocalStorage (إجمالي: ${combinedOrders.length} بعد إزالة التكرار)`);
-
-// Save all data to LocalStorage for faster loading next time
-try {
-const dataToSave = combinedOrders.map(order => ({
-id: order.id,
-owner: order.owner,
-nationalId: order.nationalId,
-phone: order.phone,
-address: order.address,
-vType: order.vType,
-vCode: order.vCode,
-vYear: order.vYear,
-chassisNumber: order.chassisNumber,
-motorNumber: order.motorNumber,
-refNumber: order.refNumber,
-timestamp: order.timestamp,
-status: order.status,
-images: order.images || []
-}));
-localStorage.setItem('vehicleOrders', JSON.stringify(dataToSave));
-console.log(`💾 تم حفظ ${dataToSave.length} سجل في LocalStorage للتحميل السريع`);
-} catch (e) {
-console.warn('⚠️ لم يتم الحفظ في LocalStorage:', e);
-}
+console.log(`📊 تم تحميل ${supabaseOrders.length} سجل من Supabase`);
 
 // Sort by vCode (numeric) - codes first, then non-coded at end
 combinedOrders.sort((a, b) => {
@@ -3436,54 +3304,10 @@ hasMore = false;
 const supabaseOrders = allSupabaseOrders;
 console.log(`✅ تم تحميل كل البيانات: ${supabaseOrders.length} سجل`);
 
-// Process data (same as loadAdminData)
-let localOrders = [];
-try {
-const stored = localStorage.getItem('vehicleOrders');
-if (stored) {
-const parsed = JSON.parse(stored);
-localOrders = parsed.map((item, index) => ({
-...item,
-id: item.id || `local-${index}`,
-source: 'localStorage',
-owner: item.owner || item.name || 'غير محدد',
-vType: item.vType || 'غير محدد',
-nationalId: item.nationalId || '',
-phone: item.phone || '',
-address: item.address || '',
-chassisNumber: item.chassisNumber || '',
-motorNumber: item.motorNumber || '',
-vCode: item.vCode || '',
-vYear: item.vYear || '',
-refNumber: item.refNumber || `REF-${Date.now()}-${index}`,
-timestamp: item.timestamp || Date.now(),
-status: item.status || 'pending',
-images: item.images || []
-}));
-}
-} catch (e) {
-console.error('خطأ في قراءة LocalStorage:', e);
-}
-
+// Use only Supabase data (LocalStorage removed for security)
 const allOrders = [...supabaseOrders];
-const existingNIDs = new Set(supabaseOrders.map(o => o.nationalId).filter(nid => nid));
-const existingRefs = new Set(supabaseOrders.map(o => o.refNumber).filter(ref => ref));
 
 let total = 0, coded = 0, pending = 0;
-
-localOrders.forEach(order => {
-const isDuplicateNID = order.nationalId && existingNIDs.has(order.nationalId);
-const isDuplicateRef = order.refNumber && existingRefs.has(order.refNumber);
-  
-if (!isDuplicateNID && !isDuplicateRef) {
-allOrders.push(order);
-if (order.nationalId) existingNIDs.add(order.nationalId);
-if (order.refNumber) existingRefs.add(order.refNumber);
-total++;
-if (order.status === 'coded' || order.status === 'delivered') coded++;
-else pending++;
-}
-});
 
 allOrders.sort((a, b) => {
 const codeA = a.vCode ? parseInt(a.vCode) : 999999;
@@ -4181,11 +4005,11 @@ status: order.status,
 images: order.images || []
 }));
 
-localStorage.setItem('vehicleOrders', JSON.stringify(uniqueOrders));
-console.log(`💾 تم حفظ ${uniqueOrders.length} سجل فريد`);
+// LocalStorage removed for security - data is in Supabase only
+console.log(`✅ تم حفظ ${uniqueOrders.length} سجل فريد في Supabase`);
 
 loadingDiv.remove();
-alert(`✅ تم حذف السجلات المكررة بنجاح!\n\n🗑️ تم حذف: ${deletedCount} سجل مكرر\n✅ تم الاحتفاظ بـ: ${uniqueOrders.length} سجل فريد\n\n☁️ تم التنظيف من Supabase ولوحة التحكم`);
+alert(`✅ تم حذف السجلات المكررة بنجاح!\n\n🗑️ تم حذف: ${deletedCount} سجل مكرر\n✅ تم الاحتفاظ بـ: ${uniqueOrders.length} سجل فريد\n\n☁️ تم التنظيف من Supabase`);
 
 // Reload data
 await loadAdminData();
@@ -4214,22 +4038,13 @@ document.getElementById('importPreview').innerHTML = '';
 const uploadBtn = document.getElementById('uploadLocalToSupabaseBtn');
 if (uploadBtn) {
 uploadBtn.onclick = async () => {
-if (!confirm('⚠️ هل تريد رفع كل البيانات المحلية إلى Supabase؟\n\nهذا سيضمن ظهور كل البيانات على جميع الأجهزة.')) {
+if (!confirm('⚠️ هل تريد رفع كل البيانات إلى Supabase؟\n\nملاحظة: LocalStorage تم إزالته للأمان، البيانات موجودة في Supabase فقط.')) {
 return;
 }
 
-const localData = localStorage.getItem('vehicleOrders');
-if (!localData) {
-alert('❌ لا توجد بيانات محلية!');
+// LocalStorage removed - data is only in Supabase now
+alert('ℹ️ البيانات موجودة في Supabase فقط.\n\nاستخدم "تحميل كل البيانات" لعرض جميع السجلات.');
 return;
-}
-
-const orders = JSON.parse(localData);
-alert(`📊 تم العثور على ${orders.length} سجل\n\nسيتم الرفع بسرعة...`); 
-document.getElementById('loadingSpinner').style.display = 'block';
-let uploaded = 0;
-let skipped = 0;
-const batchSize = 200; // Upload 200 at a time for maximum speed
 
 console.log(`🚀 بدء الرفع السريع: ${orders.length} سجل`);
 
@@ -4314,7 +4129,7 @@ document.getElementById('loadingSpinner').style.display = 'none';
 return;
 }
 
-// Step 3: Delete duplicates from Supabase
+// Step 3: Delete duplicates from Supabase only (LocalStorage removed for security)
 let deletedCount = 0;
 for (const dup of duplicatesToDelete) {
 try {
@@ -4330,35 +4145,7 @@ console.error(`❌ فشل حذف ${dup.id}:`, e);
 }
 }
 
-// Step 4: Clean LocalStorage
-try {
-const stored = localStorage.getItem('vehicleOrders');
-if (stored) {
-const localOrders = JSON.parse(stored);
-const cleanedLocal = [];
-const localSeenNIDs = new Set();
-const localSeenRefs = new Set();
-
-localOrders.forEach(order => {
-const isDupNID = order.nationalId && localSeenNIDs.has(order.nationalId);
-const isDupRef = order.refNumber && localSeenRefs.has(order.refNumber);
-
-if (!isDupNID && !isDupRef) {
-cleanedLocal.push(order);
-if (order.nationalId) localSeenNIDs.add(order.nationalId);
-if (order.refNumber) localSeenRefs.add(order.refNumber);
-}
-});
-
-const localDeletedCount = localOrders.length - cleanedLocal.length;
-localStorage.setItem('vehicleOrders', JSON.stringify(cleanedLocal));
-console.log(`🧹 تم حذف ${localDeletedCount} سجل مكرر من LocalStorage`);
-}
-} catch (e) {
-console.error('خطأ في تنظيف LocalStorage:', e);
-}
-
-// Step 5: Log the action
+// Step 4: Log the action
 await logAdminAction(currentUsername, 'تنظيف البيانات المتكررة', `تم حذف ${deletedCount} سجل مكرر من Supabase`); 
 document.getElementById('loadingSpinner').style.display = 'none';
 alert(`✅ تم تنظيف البيانات بنجاح!\n\n📊 الإحصائيات:\n🗑️ تم حذف ${deletedCount} سجل مكرر من Supabase\n💾 تم تنظيف LocalStorage\n\n🔄 سيتم تحديث الصفحة الآن...`);
@@ -4500,8 +4287,8 @@ status: order.status,
 images: order.images || []
 }));
 
-localStorage.setItem('vehicleOrders', JSON.stringify(uniqueOrders));
-console.log(`💾 تم حفظ ${uniqueOrders.length} سجل فريد في LocalStorage`);
+// LocalStorage removed for security - data is in Supabase only
+console.log(`✅ تم حفظ ${uniqueOrders.length} سجل فريد في Supabase`);
 
 // 5. Reload data
 loadingDiv.remove();
@@ -5062,4 +4849,3 @@ console.log('✅ نظام Pagination جاهز');
 
 </body>
 </html>
-
