--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@ style="width: 35px; height: 35px; object-fit: contain; border-radius: 6px; box-s
 alt="علم الشرقية">
 </div>
 <div class="header-title" style="flex: 1; min-width: 150px;">
-<h1 style="font-size: 0.9rem; margin: 0; line-height: 1.2;">🏛️ رئاسة مركز كفر صقر</h1>
+<h1 style="font-size: 0.9rem; margin: 0; line-height: 1.2;">🏛️ رئاسة مركز ومدينة كفر صقر</h1>
 <small style="font-size: 0.65rem; opacity: 0.85;">د/ أحمد المقدم</small>
 </div>
 <div style="display:flex; gap:6px; flex-wrap: wrap;">
@@ -838,6 +838,24 @@ alt="علم الشرقية">
 <p>تابع حالة شكواك واطلع على الرد</p>
 </div>
 </div>
+
+<!-- Contact Buttons -->
+<div style="display: flex; justify-content: center; gap: 25px; margin-top: 50px; margin-bottom: 30px;">
+<a href="https://wa.me/201021102607?text=مرحباً، أحتاج للمساعدة" target="_blank" style="text-decoration: none;" title="تواصل واتساب">
+<button style="width: 80px; height: 80px; border-radius: 50%; background: linear-gradient(135deg, #25D366 0%, #128C7E 100%); border: none; cursor: pointer; box-shadow: 0 10px 30px rgba(37, 211, 102, 0.4); transition: all 0.3s; display: flex; align-items: center; justify-content: center; font-size: 2.5rem;">
+💬
+</button>
+</a>
+<a href="tel:+201021102607" style="text-decoration: none;" title="اتصال مباشر">
+<button style="width: 80px; height: 80px; border-radius: 50%; background: linear-gradient(135deg, #3498db 0%, #2874a6 100%); border: none; cursor: pointer; box-shadow: 0 10px 30px rgba(52, 152, 219, 0.4); transition: all 0.3s; display: flex; align-items: center; justify-content: center; font-size: 2.5rem;">
+📞
+</button>
+</a>
+</div>
+
+<p style="text-align: center; color: rgba(255,255,255,0.9); margin-top: 10px; margin-bottom: 30px; font-size: 1rem;">
+📱 للاستفسار والدعم الفني: <strong style="color: #f1c40f;">01021102607</strong>
+</p>
 </div>
 
 <!-- Citizen Page (Vehicle Registration) -->
