--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@ alt="علم الشرقية">
 <div class="portal-container">
 <!-- Tuk Tuk Coding Portal -->
 <div class="portal-box" onclick="openService('citizenPage')" style="border-bottom: 6px solid var(--primary);">
-<i style="font-style: normal; font-size: 85px;">🚜</i>
+<img src="https://i.postimg.cc/QtgDfPKv/images-(1).jpg" style="width: 120px; height: 100px; object-fit: contain; border-radius: 15px; margin-bottom: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);" alt="توكتوك">
 <h2 style="color: var(--primary);">تكويد التوكتوك</h2>
 <p>تسجيل بيانات التوكتوك بالمنظومة الذكية</p>
 </div>
