--- a/index.html
+++ b/index.html
@@ -865,8 +865,9 @@ alt="علم الشرقية">
 <!-- Registration Form -->
 <div id="registrationForm">
 <div style="background: linear-gradient(135deg, rgba(26, 82, 118, 0.1) 0%, rgba(52, 152, 219, 0.1) 100%); padding: 20px; border-radius: 15px; margin-bottom: 30px; text-align: center; border: 2px solid var(--primary);">
+<img src="https://i.postimg.cc/QtgDfPKv/images-(1).jpg" style="width: 100px; height: 80px; object-fit: contain; border-radius: 10px; margin-bottom: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);" alt="توكتوك">
 <p style="margin: 0; color: var(--primary); font-size: 1.3rem; font-weight: 700;">
-🚜 تسجيل توكتوك
+تسجيل توكتوك
 </p>
 </div>
 
